--- a/Bookish.Web/Bookish.Web.csproj
+++ b/Bookish.Web/Bookish.Web.csproj
@@ -148,6 +148,7 @@
         <Content Include="Scripts\modernizr-2.8.3.js" />
         <Content Include="Views\Home\Account.cshtml" />
         <Content Include="Views\Home\AddBook.cshtml" />
+        <Content Include="Views\Home\ViewBook.cshtml" />
         <Content Include="Views\Home\Books.cshtml" />
         <Content Include="Views\Home\Register.cshtml" />
         <Content Include="Web.config" />
